--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header class="main-header">
     <div class="logo-block">
-      <img class="logo" src="brand-logo.png" alt="Логотип" />
-      <div class="site-title">
-        <strong>База_Субподряд</strong>
-        <span>Контакты заказчиков — без посредников</span>
-      </div>
+      <img class="logo" src="brand-logo.png" alt="Логотип Базы" />
     </div>
     <nav class="main-nav">
       <a class="nav-button" href="order.html">Разместить заказ</a>
@@ -22,17 +17,19 @@
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <h1>Платформа прямых строительных заказов</h1>
-      <p>Найдите надёжных подрядчиков или станьте исполнителем. Без посредников. Без комиссии.</p>
-      <input type="text" class="search-input" placeholder="Поиск по ключевым словам..." />
-    </section>
-  </main>
+  <div class="hero">
+    <h1>Платформа прямых строительных заказов</h1>
+    <p>Найдите надёжных подрядчиков или станьте исполнителем. Без посредников. Без комиссии.</p>
+  </div>
+
+  <div class="search-box">
+    <input type="text" placeholder="Поиск по ключевым словам..." />
+  </div>
 
   <footer>
-    <p>© 2025 База Субподряд — <a href="https://t.me/Baza_Subpodryad" target="_blank">Telegram</a></p>
+    <div style="margin-top: 40px; text-align: center; color: #666;">
+      © 2025 База Субподряд — <a href="https://t.me/Baza_Subpodryad" target="_blank">Telegram</a>
+    </div>
   </footer>
-
 </body>
 </html>
