--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="logo-block">
-      <img class="logo" src="brand-logo.png" alt="Логотип Базы" />
-    </div>
-    <nav class="main-nav">
-      <a class="nav-button" href="order.html">Разместить заказ</a>
-      <a class="nav-button alt" href="register-executor.html">Стать исполнителем</a>
-    </nav>
-  </header>
+  <div class="logo-block">
+    <img class="logo" src="brand-logo.png" alt="База Субподряд" />
+  </div>
+  <nav class="main-nav">
+    <a class="nav-button" href="order.html">Разместить заказ</a>
+    <a class="nav-button alt" href="register-executor.html">Стать исполнителем</a>
+  </nav>
+</header>
+
 
   <div class="hero">
     <h1>Платформа прямых строительных заказов</h1>
