--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   </div>
 
   <div class="search-box">
-    <input type="text" placeholder="Поиск по ключевым словам..." />
-  </div>
+  <input type="text" placeholder="Поиск по ключевым словам…" />
+</div>
+
 
   <footer>
     <div style="margin-top: 40px; text-align: center; color: #666;">
