--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   </div>
 
   <div class="search-box">
-  <input type="text" placeholder="Поиск по ключевым словам…" />
+  <input type="text" class="search-input" placeholder="Поиск по ключевым словам...">
 </div>
+
 
 
   <footer>
