--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>База Субподряд — Прямые заказы</title>
   <link rel="stylesheet" href="style.css" />
+<script src="script.js" defer></script>
 </head>
 <body>
+  <div id="orders-container"></div>
   <header class="main-header">
   <div class="logo-block">
     <img class="logo" src="brand-logo.png" alt="База Субподряд" />
