--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <div class="search-box">
   <input type="text" class="search-input" placeholder="Поиск по ключевым словам...">
 </div>
-<div id="orders-container"></div>
+<section class="orders-section">
+  <div id="orders-container"></div>
+</section>
+
 
 
   <footer>
