--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </nav>
 </header>
   <div class="hero">
-    <h1>Платформа прямых строительных заказов</h1>
-    <p>Найдите надёжных подрядчиков или станьте исполнителем. Без посредников. Без комиссии.</p>
-  </div>
+  <h1>Только генподряд. Только прямые заказы.</h1>
+  <p>Контакты генеральных подрядчиков — без посредников, без комиссии.</p>
+</div>
   <div class="search-box">
   <input type="text" class="search-input" placeholder="Поиск по ключевым словам...">
 </div>
