--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <a class="nav-button alt" href="register-executor.html">Стать исполнителем</a>
   </nav>
 </header>
-  <div class="hero">
+ <div class="hero">
   <h1>Только генподряд. Только прямые заказы.</h1>
   <p>Контакты генеральных подрядчиков — без посредников, без комиссии.</p>
+  <a href="#how-it-works" class="cta-button">Как это работает</a>
 </div>
   <div class="search-box">
   <input type="text" class="search-input" placeholder="Поиск по ключевым словам...">
