--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <div class="hero">
   <h1>Только генподряд. Только прямые заказы.</h1>
   <p>Контакты генеральных подрядчиков — без посредников, без комиссии.</p>
-  <a href="#how-it-works" class="cta-button">Как это работает</a>
+  <a href="how-it-works.html" class="how-it-works-btn">Как это работает</a>
 </div>
   <div class="search-box">
   <input type="text" class="search-input" placeholder="Поиск по ключевым словам...">
