--- a/order.html
+++ b/order.html
@@ -22,10 +22,11 @@
     <h1>Разместить заказ</h1>
     <p>Заполните заявку — мы покажем её всем проверенным исполнителям</p>
   </div>
-<div style="background-color: #fff3cd; padding: 16px; margin-bottom: 24px; border-left: 4px solid #ffc107; border-radius: 8px; font-size: 15px; color: #856404;">
-  <strong>Если у вас нестандартный запрос —</strong><br />
-  Просто оставьте номер телефона и нажмите <b>«Требую поддержки»</b>. Мы оперативно свяжемся и поможем разместить заказ.
+<div class="support-notice">
+  <strong>У вас особые пожелания?</strong><br />
+  Просто укажите номер телефона и нажмите кнопку <b>«Требую поддержки»</b> — мы свяжемся с вами и поможем всё оформить.
 </div>
+
 
   <div style="max-width: 720px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.08); font-family: 'Segoe UI', sans-serif;">
     <form action="#" method="POST" enctype="multipart/form-data">
