--- a/order.html
+++ b/order.html
@@ -22,10 +22,11 @@
     <h1>Разместить заказ</h1>
     <p>Заполните заявку — мы покажем её всем проверенным исполнителям</p>
   </div>
-<div class="support-notice">
-  <strong>У вас особые пожелания?</strong><br />
-  Просто укажите номер телефона и нажмите кнопку <b>«Требую поддержки»</b> — мы свяжемся с вами и поможем всё оформить.
+<div class="support-banner">
+  <strong>У вас особые пожелания?</strong><br>
+  Просто заполните номер телефона и нажмите <b>«Требую поддержки»</b>. Мы свяжемся с вами.
 </div>
+
 
 
   <div style="max-width: 720px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.08); font-family: 'Segoe UI', sans-serif;">
