--- a/order.html
+++ b/order.html
@@ -32,19 +32,19 @@
   <div style="max-width: 720px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.08); font-family: 'Segoe UI', sans-serif;">
     <form action="#" method="POST" enctype="multipart/form-data">
       <div class="form-group">
-        <label>📍 Регион / город</label>
+        <label>Регион / город</label>
         <input type="text" name="region" required />
       </div>
 
       <div class="form-group">
-        <label>🏗 Адрес объекта</label>
+        <label> Адрес объекта</label>
         <input type="text" name="address" required />
       </div>
 
       <div class="form-group">
-        <label for="work-types">📂 Типы работ</label>
+        <label for="work-types">Виды работ</label>
         <div class="dropdown-checkbox">
-          <button type="button" class="dropdown-toggle" onclick="toggleCheckboxes()">Выбрать виды работ</button>
+          <button type="button" class="dropdown-toggle" onclick="toggleCheckboxes()">Выбрать</button>
           <div id="checkboxes" class="checkbox-list">
             <label><input type="checkbox" name="workTypes[]" value="Бетонирование"> Бетонирование</label>
             <label><input type="checkbox" name="workTypes[]" value="Кровля"> Кровля</label>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="form-group">
-        <label>📝 Комментарии / пожелания</label>
+        <label> Комментарии / пожелания</label>
         <textarea name="comment" rows="4"></textarea>
       </div>
 
@@ -71,17 +71,17 @@
       </div>
 
       <div class="form-group">
-        <label>📞 Контактный телефон</label>
+        <label> Контактный телефон</label>
         <input type="tel" name="phone" placeholder="+7 900 000 00 00" required />
       </div>
 
       <div class="form-group">
-        <label>🗂 Загрузить файл / смету</label>
+        <label> Загрузить файл / смету</label>
         <input type="file" name="attachment" accept=".pdf,.doc,.docx,.xlsx,.xls" />
       </div>
 
       <div class="form-group" style="display: flex; gap: 16px; margin-top: 30px;">
-        <button class="nav-button" type="submit">📤 Отправить заказ</button>
+        <button class="nav-button" type="submit"> Отправить заказ</button>
         <button class="nav-button alt" type="button" onclick="alert('Мы с вами свяжемся!')">🆘 Требую поддержки</button>
       </div>
     </form>
