--- a/order.html
+++ b/order.html
@@ -61,12 +61,12 @@
       </div>
 
       <div class="form-group">
-        <label>ИНН организации (необязательно)</label>
+        <label>ИНН организации </label>
         <input type="text" name="inn" />
       </div>
 
       <div class="form-group">
-        <label>📄 Номер контракта (если есть)</label>
+        <label> Номер контракта </label>
         <input type="text" name="contract" />
       </div>
 
@@ -82,7 +82,7 @@
 
       <div class="form-group" style="display: flex; gap: 16px; margin-top: 30px;">
         <button class="nav-button" type="submit"> Отправить заказ</button>
-        <button class="nav-button alt" type="button" onclick="alert('Мы с вами свяжемся!')">🆘 Требую поддержки</button>
+        <button class="nav-button alt" type="button" onclick="alert('Мы с вами свяжемся!')">Требую поддержки</button>
       </div>
     </form>
   </div>
