--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   <input type="text" class="search-input" placeholder="Поиск по ключевым словам...">
 </div>
 <section class="orders-section">
+<div class="orders-wrapper">
   <div id="orders-container"></div>
+</div>
+
 </section>
 
 
