--- a/register-executor.html
+++ b/register-executor.html
@@ -23,7 +23,7 @@
   </div>
 
   <section style="text-align: center; margin: 40px;">
-    <a href="#" class="nav-button">Я — Субподрядчик</a>
+   <a class="nav-button" href="register-subcontractor.html">Я субподрядчик</a>
     <a href="#" class="nav-button alt" style="margin-left: 20px;">Я — Бригадир</a>
   </section>
 
