--- a/register-executor.html
+++ b/register-executor.html
@@ -24,7 +24,8 @@
 
   <section style="text-align: center; margin: 40px;">
    <a class="nav-button" href="register-subcontractor.html">Я субподрядчик</a>
-    <a href="#" class="nav-button alt" style="margin-left: 20px;">Я — Бригадир</a>
+   <a class="nav-button alt" href="register-brigade.html">Я — Бригадир</a>
+
   </section>
 
   <footer>
