--- a/order.html
+++ b/order.html
@@ -86,6 +86,12 @@
       </div>
     </form>
   </div>
+<div class="register-benefits">
+  <h2>Хотите выбрать исполнителя сами?</h2>
+  <p>Зарегистрируйтесь как заказчик и получите доступ к полному списку исполнителей. 
+  Фильтрация по городу, адресу и виду работ. Выбирайте сами — экономьте время и средства.</p>
+  <a class="cta-button" href="register-client.html">Зарегистрироваться как заказчик</a>
+</div>
 
   <footer>
     <div style="margin-top: 40px; text-align: center; color: #666;">
