--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,35 +1,84 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Как это работает — База Субподряд</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Как это работает — База_Субподряд</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <main style="max-width: 720px; margin: 0 auto; padding: 40px; font-family: sans-serif; line-height: 1.6;">
 
-  <header class="main-header">
-    <div class="logo-block">
-  <img class="logo" src="brand-logo.png" alt="База Субподряд" />
-</div>
+    <h1>Как это работает?</h1>
 
-    <nav class="main-nav">
-      <a class="nav-button" href="index.html">Главная</a>
-      <a class="nav-button" href="order.html">Разместить заказ</a>
-      <a class="nav-button alt" href="register-executor.html">Стать исполнителем</a>
-    </nav>
-  </header>
+    <section>
+      <h2>Мы не просто сайт — мы платформа доверия</h2>
+      <p>
+        <strong>База_Субподряд</strong> — это продолжение успешно работающего Telegram-канала, где строительные исполнители уже сейчас находят заказы от генеральных подрядчиков без посредников.
+      </p>
+      <p>
+        Сайт стал логичным следующим шагом: теперь взаимодействие между заказчиками и исполнителями выходит на новый уровень — с фильтрами, карточками, поиском и удобной оплатой.
+      </p>
+      <p>
+        Но запускать такой проект «на всех» — значит убить его на старте. Поэтому:
+      </p>
+    </section>
 
-  <main style="padding: 60px 20px; text-align: center;">
-    <h1 style="font-size: 24px; color: #3C3C3C;">Как это работает</h1>
-    <p style="font-size: 16px; color: #666; margin-top: 20px;">Здесь скоро появится подробное объяснение принципа работы платформы.</p>
+    <section>
+      <h2>Мы начинаем с <em>Клуба первых</em></h2>
+      <p>
+        Сейчас мы запускаем <strong>ограниченный доступ</strong> — только для тех, кто действительно хочет расти, работать прозрачно и стать частью новой отраслевой культуры.
+      </p>
+      <ul>
+        <li><strong>Исполнители</strong> проходят ручную модерацию — чтобы быть уверенными в их опыте, надёжности и реальном статусе.</li>
+        <li><strong>Заказчики</strong> получают доступ к проверенным исполнителям, а не к хаосу из случайных откликов.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Как это устроено:</h2>
+      <ol>
+        <li>Вы оставляете заявку — короткая форма для исполнителя или заказчика.</li>
+        <li>Мы проверяем данные вручную — быстро, но внимательно.</li>
+        <li>Вы получаете приглашение в Клуб — и доступ к закрытому списку подрядов или исполнителей.</li>
+        <li>Контакт оплачивается — стоимость зависит от типа заказа и его срочности. <strong>Цены варьируются от 999 до 9999 рублей</strong>.</li>
+        <li>Вы работаете напрямую — без посредников. Как это и должно быть.</li>
+      </ol>
+    </section>
+
+    <section>
+      <h2>Почему важно заполнить всё?</h2>
+      <p>
+        Мы подходим к отбору исполнителей серьёзно, но по-человечески.
+      </p>
+      <p>
+        Если вы заполните только имя и номер телефона — шансы попасть в первую волну, конечно, есть. 
+        Но если вы расскажете чуть больше о себе — укажете ИНН, <strong>загрузите карточку предприятия</strong>, укажете виды работ, город, пару слов об опыте — вы становитесь для нас живым, понятным специалистом.
+      </p>
+      <p>
+        <strong>Чем больше мы о вас знаем — тем больше доверия. А значит, и шансов.</strong>
+      </p>
+      <p>
+        Позже, когда на платформе будет много заказов, именно по этим данным заказчики смогут находить исполнителей по фильтрам: по региону, по виду работ, по опыту. 
+        А пока — эти данные помогают нам понять, кому первым дать доступ.
+      </p>
+      <p>
+        Заполняйте уверенно — всё, что вы укажете, работает на вас.
+      </p>
+    </section>
+
+    <section>
+      <h2>Мы строим платформу, а не просто базу</h2>
+      <p>
+        Сейчас у нас только <strong>30 слотов для первых исполнителей</strong> и <strong>10 — для заказчиков</strong>.
+        Эти люди — наше ядро. Они не просто участники. Они — соавторы.
+      </p>
+      <p>
+        Если вы хотите быть среди них — добро пожаловать. <br>
+        Если нет — будет вторая волна. Но совсем другая.
+      </p>
+    </section>
+
   </main>
-
-  <footer>
-    <div style="margin-top: 40px; text-align: center; color: #666;">
-      © 2025 База Субподряд — <a href="https://t.me/Baza_Subpodryad" target="_blank">Telegram</a>
-    </div>
-  </footer>
-
 </body>
 </html>
