--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,84 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Как это работает — База_Субподряд</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <main style="max-width: 720px; margin: 0 auto; padding: 40px; font-family: sans-serif; line-height: 1.6;">
+<div class="hero">
+  <h1>Как это работает?</h1>
+  <p>Выберите, кто вы, чтобы узнать, как работает платформа:</p>
+  <div style="margin-top: 40px; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+    <a class="cta-button" href="how-it-works-client.html">Я — Заказчик</a>
+    <a class="nav-button alt" href="how-it-works-executor.html">Я — Исполнитель</a>
+  </div>
+</div>
 
-    <h1>Как это работает?</h1>
-
-    <section>
-      <h2>Мы не просто сайт — мы платформа доверия</h2>
-      <p>
-        <strong>База_Субподряд</strong> — это продолжение успешно работающего Telegram-канала, где строительные исполнители уже сейчас находят заказы от генеральных подрядчиков без посредников.
-      </p>
-      <p>
-        Сайт стал логичным следующим шагом: теперь взаимодействие между заказчиками и исполнителями выходит на новый уровень — с фильтрами, карточками, поиском и удобной оплатой.
-      </p>
-      <p>
-        Но запускать такой проект «на всех» — значит убить его на старте. Поэтому:
-      </p>
-    </section>
-
-    <section>
-      <h2>Мы начинаем с <em>Клуба первых</em></h2>
-      <p>
-        Сейчас мы запускаем <strong>ограниченный доступ</strong> — только для тех, кто действительно хочет расти, работать прозрачно и стать частью новой отраслевой культуры.
-      </p>
-      <ul>
-        <li><strong>Исполнители</strong> проходят ручную модерацию — чтобы быть уверенными в их опыте, надёжности и реальном статусе.</li>
-        <li><strong>Заказчики</strong> получают доступ к проверенным исполнителям, а не к хаосу из случайных откликов.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Как это устроено:</h2>
-      <ol>
-        <li>Вы оставляете заявку — короткая форма для исполнителя или заказчика.</li>
-        <li>Мы проверяем данные вручную — быстро, но внимательно.</li>
-        <li>Вы получаете приглашение в Клуб — и доступ к закрытому списку подрядов или исполнителей.</li>
-        <li>Контакт оплачивается — стоимость зависит от типа заказа и его срочности. <strong>Цены варьируются от 999 до 9999 рублей</strong>.</li>
-        <li>Вы работаете напрямую — без посредников. Как это и должно быть.</li>
-      </ol>
-    </section>
-
-    <section>
-      <h2>Почему важно заполнить всё?</h2>
-      <p>
-        Мы подходим к отбору исполнителей серьёзно, но по-человечески.
-      </p>
-      <p>
-        Если вы заполните только имя и номер телефона — шансы попасть в первую волну, конечно, есть. 
-        Но если вы расскажете чуть больше о себе — укажете ИНН, <strong>загрузите карточку предприятия</strong>, укажете виды работ, город, пару слов об опыте — вы становитесь для нас живым, понятным специалистом.
-      </p>
-      <p>
-        <strong>Чем больше мы о вас знаем — тем больше доверия. А значит, и шансов.</strong>
-      </p>
-      <p>
-        Позже, когда на платформе будет много заказов, именно по этим данным заказчики смогут находить исполнителей по фильтрам: по региону, по виду работ, по опыту. 
-        А пока — эти данные помогают нам понять, кому первым дать доступ.
-      </p>
-      <p>
-        Заполняйте уверенно — всё, что вы укажете, работает на вас.
-      </p>
-    </section>
-
-    <section>
-      <h2>Мы строим платформу, а не просто базу</h2>
-      <p>
-        Сейчас у нас только <strong>30 слотов для первых исполнителей</strong> и <strong>10 — для заказчиков</strong>.
-        Эти люди — наше ядро. Они не просто участники. Они — соавторы.
-      </p>
-      <p>
-        Если вы хотите быть среди них — добро пожаловать. <br>
-        Если нет — будет вторая волна. Но совсем другая.
-      </p>
-    </section>
-
-  </main>
-</body>
 </html>
