--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,10 +1,34 @@
-<div class="hero">
-  <h1>Как это работает?</h1>
-  <p>Выберите, кто вы, чтобы узнать, как работает платформа:</p>
-  <div style="margin-top: 40px; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
-    <a class="cta-button" href="how-it-works-client.html">Я — Заказчик</a>
-    <a class="nav-button alt" href="how-it-works-executor.html">Я — Исполнитель</a>
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Как это работает — База Субподряд</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="main-header">
+    <div class="logo-block">
+      <img class="logo" src="brand-logo.png" alt="База Субподряд" />
+    </div>
+    <nav class="main-nav">
+      <a class="nav-button" href="index.html">Главная</a>
+    </nav>
+  </header>
 
+  <div class="hero">
+    <h1>Как это работает?</h1>
+    <p>Выберите, кто вы, чтобы узнать, как работает платформа:</p>
+    <div class="choice-block">
+      <a class="cta-button" href="how-it-works-client.html">Я — Заказчик</a>
+      <a class="nav-button alt" href="how-it-works-executor.html">Я — Исполнитель</a>
+    </div>
+  </div>
+
+  <footer>
+    <div style="margin-top: 40px; text-align: center; color: #666;">
+      © 2025 База Субподряд — <a href="https://t.me/Baza_Subpodryad" target="_blank">Telegram</a>
+    </div>
+  </footer>
+</body>
 </html>
