--- a/how-it-works.html
+++ b/how-it-works.html
@@ -21,7 +21,7 @@
     <p>Выберите, кто вы, чтобы узнать, как работает платформа:</p>
     <div class="choice-block">
       <a class="cta-button" href="how-it-works-client.html">Я — Заказчик</a>
-      <a class="nav-button alt" href="how-it-works-executor.html">Я — Исполнитель</a>
+      <a class="cta-button alt" href="how-it-works-executor.html">Я — Исполнитель</a>
     </div>
   </div>
 
