--- a/how-it-works.html
+++ b/how-it-works.html
@@ -18,7 +18,13 @@
 
   <div class="hero">
     <h1>Как это работает?</h1>
-    <p>Выберите, кто вы, чтобы узнать, как работает платформа:</p>
+    <p>
+  Здесь каждый на своём месте: генеральные подрядчики размещают реальные строительные заказы, исполнители находят работу напрямую — без посредников, без вторичного рынка, без хаоса.
+</p>
+<p>
+  Выберите, кто вы, чтобы узнать, как всё работает именно для вас.
+</p>
+
     <div class="choice-block">
       <a class="cta-button" href="how-it-works-client.html">Я — Заказчик</a>
       <a class="cta-button alt" href="how-it-works-executor.html">Я — Исполнитель</a>
