--- a/how-it-works.html
+++ b/how-it-works.html
@@ -19,7 +19,7 @@
   <div class="hero">
     <h1>Как это работает?</h1>
     <p>
-  Здесь каждый на своём месте: генеральные подрядчики размещают реальные строительные заказы, исполнители находят работу напрямую — без посредников, без вторичного рынка, без хаоса.
+  Здесь каждый на своём месте: генеральные подрядчики размещают реальные строительные заказы,<br> исполнители находят работу напрямую — без посредников, без вторичного рынка, без хаоса.
 </p>
 <p>
   Выберите, кто вы, чтобы узнать, как всё работает именно для вас.
