--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="logo-block">
     <img class="logo" src="brand-logo.png" alt="База Субподряд" />
   </div>
+  <div class="slogan">Создано строителями для строителей</div>
   <nav class="main-nav">
     <a class="nav-button" href="order.html">Разместить заказ</a>
     <a class="nav-button alt" href="register-executor.html">Стать исполнителем</a>
