--- a/register-subcontractor.html
+++ b/register-subcontractor.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Регистрация Субподрядчика</title>
+  <title>Регистрация субподрядчика</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,14 +13,71 @@
     </div>
     <nav class="main-nav">
       <a class="nav-button" href="index.html">Главная</a>
-      <a class="nav-button alt" href="order.html">Разместить заказ</a>
     </nav>
   </header>
 
-  <div class="hero">
-    <h1>Регистрация Субподрядчика</h1>
-    <p>Здесь будет форма для регистрации юридических лиц (ООО, ИП и т.д.)</p>
-  </div>
+  <main class="form-wrapper" style="max-width: 720px; margin: 40px auto; padding: 0 20px;">
+    <h1>Регистрация субподрядчика</h1>
+    <form class="registration-form">
+
+      <section class="form-group">
+        <label for="company">Название компании / ИП</label>
+        <input type="text" id="company" name="company" required />
+      </section>
+
+      <section class="form-group">
+        <label for="phone">Телефон</label>
+        <input type="tel" id="phone" name="phone" required />
+      </section>
+
+      <section class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
+      </section>
+
+      <section class="form-group">
+        <label for="website">Сайт (если есть)</label>
+        <input type="url" id="website" name="website" />
+      </section>
+
+      <section class="form-group">
+        <label for="inn">ИНН</label>
+        <input type="text" id="inn" name="inn" required />
+      </section>
+
+      <section class="form-group">
+        <label for="city">Город</label>
+        <input type="text" id="city" name="city" required />
+      </section>
+
+      <section class="form-group">
+        <label for="region">Регион</label>
+        <input type="text" id="region" name="region" />
+      </section>
+
+      <section class="form-group">
+        <label for="services">Виды работ</label>
+        <textarea id="services" name="services" placeholder="Например: монолит, отделка, кровля..." rows="3"></textarea>
+      </section>
+
+      <section class="form-group">
+        <label for="experience">Опыт</label>
+        <textarea id="experience" name="experience" placeholder="Опишите ваш опыт, количество лет, объекты..." rows="3"></textarea>
+      </section>
+
+      <section class="form-group">
+        <label for="file">Карточка предприятия (PDF, JPG)</label>
+        <input type="file" id="file" name="file" accept=".pdf, .jpg, .jpeg, .png" />
+      </section>
+
+      <section class="form-group">
+        <label for="notes">Комментарий (необязательно)</label>
+        <textarea id="notes" name="notes" rows="3"></textarea>
+      </section>
+
+      <button type="submit" class="cta-button">Зарегистрироваться</button>
+    </form>
+  </main>
 
   <footer>
     <div style="margin-top: 40px; text-align: center; color: #666;">
