--- a/register-subcontractor.html
+++ b/register-subcontractor.html
@@ -23,56 +23,67 @@
       <section class="form-group">
         <label for="company">Название компании / ИП</label>
         <input type="text" id="company" name="company" required />
+        <small>Полное наименование юридического лица или индивидуального предпринимателя.</small>
       </section>
 
       <section class="form-group">
         <label for="phone">Телефон</label>
         <input type="tel" id="phone" name="phone" required />
+        <small>Основной номер для связи — мобильный или рабочий.</small>
       </section>
 
       <section class="form-group">
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required />
+        <small>На этот адрес придёт подтверждение регистрации.</small>
       </section>
 
       <section class="form-group">
         <label for="website">Сайт (если есть)</label>
         <input type="url" id="website" name="website" />
+        <small>Можно оставить пустым, если сайта нет.</small>
       </section>
 
       <section class="form-group">
         <label for="inn">ИНН</label>
         <input type="text" id="inn" name="inn" required />
+        <small>Идентификационный номер налогоплательщика — используется для проверки надёжности.</small>
       </section>
 
       <section class="form-group">
         <label for="city">Город</label>
         <input type="text" id="city" name="city" required />
+        <small>Основной город, в котором вы работаете или зарегистрированы.</small>
       </section>
 
       <section class="form-group">
         <label for="region">Регион</label>
         <input type="text" id="region" name="region" />
+        <small>Например: Московская область, Краснодарский край и т.п.</small>
       </section>
 
       <section class="form-group">
         <label for="services">Виды работ</label>
         <textarea id="services" name="services" placeholder="Например: монолит, отделка, кровля..." rows="3"></textarea>
+        <small>Укажите направления, в которых вы специализируетесь.</small>
       </section>
 
       <section class="form-group">
         <label for="experience">Опыт</label>
         <textarea id="experience" name="experience" placeholder="Опишите ваш опыт, количество лет, объекты..." rows="3"></textarea>
+        <small>Расскажите о стаже, реализованных проектах, квалификации команды.</small>
       </section>
 
       <section class="form-group">
         <label for="file">Карточка предприятия (PDF, JPG)</label>
         <input type="file" id="file" name="file" accept=".pdf, .jpg, .jpeg, .png" />
+        <small>Загрузите презентационную или регистрационную карточку вашей организации.</small>
       </section>
 
       <section class="form-group">
         <label for="notes">Комментарий (необязательно)</label>
         <textarea id="notes" name="notes" rows="3"></textarea>
+        <small>Можете указать дополнительную информацию или задать вопрос.</small>
       </section>
 
       <button type="submit" class="cta-button">Зарегистрироваться</button>
