--- a/register-subcontractor.html
+++ b/register-subcontractor.html
@@ -29,7 +29,12 @@
       <section class="form-group">
         <label for="phone">Телефон</label>
         <input type="tel" id="phone" name="phone" required />
-        <small>Основной номер для связи — мобильный или рабочий.</small>
+        <small>Основной номер для связи, с WatsApp.</small>
+      </section>
+       <section class="form-group">
+        <label for="phone">Телефон</label>
+        <input type="tel" id="phone" name="phone" required />
+        <small>Дополнительный номер для связи.</small>
       </section>
 
       <section class="form-group">
@@ -47,7 +52,8 @@
       <section class="form-group">
         <label for="inn">ИНН</label>
         <input type="text" id="inn" name="inn" required />
-        <small>Идентификационный номер налогоплательщика — используется для проверки надёжности.</small>
+        <small>Мы используем ИНН для проверки надёжности и допуска к заказам. Он не отображается в открытом доступе.</small>
+
       </section>
 
       <section class="form-group">
