--- a/register-subcontractor.html
+++ b/register-subcontractor.html
@@ -47,7 +47,11 @@
         <input type="url" id="website" name="website" />
         <small>Можно оставить пустым, если сайта нет.</small>
       </section>
-
+<section class="form-group">
+        <label for="telegram">Телеграм (если есть)</label>
+        <input type="url" id="telegram" name="telegram" />
+        <small>Можно оставить пустым, если канала нет.</small>
+      </section>
       <section class="form-group">
         <label for="inn">ИНН</label>
         <input type="text" id="inn" name="inn" required />
