--- a/register-subcontractor.html
+++ b/register-subcontractor.html
@@ -23,7 +23,7 @@
       <section class="form-group">
         <label for="company">Название компании / ИП</label>
         <input type="text" id="company" name="company" required />
-        <small>Полное наименование юридического лица или индивидуального предпринимателя.</small>
+        <textarea readonly class="note-text">Полное наименование юридического лица или индивидуального предпринимателя.</textarea>
       </section>
 
       <section class="form-group">
