--- a/register-brigade.html
+++ b/register-brigade.html
@@ -23,37 +23,37 @@
       <section class="form-group">
         <label for="leader-name">ФИО бригадира</label>
         <input type="text" id="leader-name" name="leader-name" required />
-        <textarea readonly class="note-text">Укажите полное имя человека, который отвечает за вашу бригаду и будет выходить на связь.</textarea>
+        <div class="note-text">Укажите полное имя человека, который отвечает за вашу бригаду и будет выходить на связь.</div>
       </section>
 
       <section class="form-group">
         <label for="phone">Номер телефона</label>
         <input type="tel" id="phone" name="phone" required />
-        <textarea readonly class="note-text">Основной номер для связи, желательно с WhatsApp или Telegram.</textarea>
+        <div class="note-text">Основной номер для связи, желательно с WhatsApp или Telegram.</div>
       </section>
 
       <section class="form-group">
         <label for="city">Город</label>
         <input type="text" id="city" name="city" required />
-        <textarea readonly class="note-text">Укажите город, в котором базируется ваша бригада.</textarea>
+        <div class="note-text">Укажите город, в котором базируется ваша бригада.</div>
       </section>
 
       <section class="form-group">
         <label for="region">Область / регион</label>
         <input type="text" id="region" name="region" />
-        <textarea readonly class="note-text">Например: Московская область, Краснодарский край и т.п.</textarea>
+        <div class="note-text">Например: Московская область, Краснодарский край и т.п.</div>
       </section>
 
       <section class="form-group">
         <label for="people">Сколько человек в бригаде?</label>
         <input type="number" id="people" name="people" min="1" required />
-        <textarea readonly class="note-text">Укажите среднее количество рабочих в вашей бригаде.</textarea>
+        <div class="note-text">Укажите среднее количество рабочих в вашей бригаде.</div>
       </section>
 
       <section class="form-group">
         <label for="specialization">Специализация</label>
         <textarea id="specialization" name="specialization" placeholder="Например: кровля, фасады, бетонные работы..." rows="3"></textarea>
-        <textarea readonly class="note-text">Опишите типы работ, которые вы выполняете, и опыт вашей бригады.</textarea>
+        <div class="note-text">Опишите типы работ, которые вы выполняете, и опыт вашей бригады.</div>
       </section>
 
       <button type="submit" class="cta-button">Отправить</button>
@@ -67,3 +67,4 @@
   </footer>
 </body>
 </html>
+
