--- a/register-brigade.html
+++ b/register-brigade.html
@@ -16,7 +16,7 @@
     </nav>
   </header>
 
-  <main class="form-wrapper" style="max-width: 720px; margin: 40px auto; padding: 0 20px;">
+  <main class="form-wrapper">
     <h1>Регистрация строительной бригады</h1>
     <form class="registration-form">
 
@@ -61,10 +61,9 @@
   </main>
 
   <footer>
-    <div style="margin-top: 40px; text-align: center; color: #666;">
+    <div class="footer">
       © 2025 База Субподряд — <a href="https://t.me/Baza_Subpodryad" target="_blank">Telegram</a>
     </div>
   </footer>
 </body>
 </html>
-
